--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,14 @@ footer {
   text-align: center;
 }
 
-@media screen {
-  
+@media screen and (max-width: 992px){
+  .card {
+    width: 47%
+  }
+}
+
+@media screen and (max-width: 768px){
+  .card {
+    width: 98%
+  }
 }
