add <pre> tags for code snippets and selectable text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,10 @@ header p {
   margin: 1%
 }
 
+.card code {
+  user-select: text;
+}
+
 footer {
   justify-content: center;
   text-align: center;
