--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,11 +35,24 @@ header p {
   border: 2px dashed white;
   border-radius: 5px;
   padding: 20px;
-  margin: 1%
+  margin: 1%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card p {
+  flex: 1;
 }
 
 .card code {
   user-select: text;
+  flex: 5 0 0;
+}
+
+pre {
+  background: linear-gradient(blue, purple);
+  border-radius: 5px;
+  width: 100%;
 }
 
 footer {
