centered and stretched code snippets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,19 +38,23 @@ header p {
   margin: 1%;
   display: flex;
   flex-direction: column;
-}
-
-.card p {
-  flex: 1;
+  justify-content: space-around;
 }
 
 .card code {
   user-select: text;
-  flex: 5 0 0;
+  flex: 1;
+  background: linear-gradient(blue, purple);
+  display: flex;
+  align-items: center;
+  margin: 5px;
+}
+
+.card p {
+  margin: 3% 0;
 }
 
 pre {
-  background: linear-gradient(blue, purple);
   border-radius: 5px;
   width: 100%;
 }
