--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,15 @@ header p {
   display: flex;
   align-items: center;
   margin: 5px;
+  transition: font-size 1s;
+}
+
+.card code:hover{
+  font-size: 16px;
+}
+
+.card code:hover {
+  
 }
 
 .card p {
